sdk/javascript/3.0/setup.mdx
---
title: "Setup"
description: "Setup — CometChat documentation."
---



<Note>
Migrating app version from v2 to v3 ?

Skip the create new app step. Your existing v2 app can be migrated to v3.

Follow steps mentioned in **Add the CometChat dependency** section below to upgrade to latest version of v3

</Note>

## Get your Application Keys

[Signup for CometChat](https://app.cometchat.com) and then:

1. Create a new app
2. Head over to the **API & Auth Keys** section and note the **Auth Key**, **App ID** & **Region**

## Add the CometChat Dependency

### NPM

<Tabs>
<Tab title="JavaScript">
```bash
npm install @cometchat-pro/chat@3.0.13 --save
```

</Tab>

</Tabs>

Then, import the `CometChat` object wherever you want to use CometChat.

<Tabs>
<Tab title="JavaScript">
```bash
import { CometChat } from "@cometchat-pro/chat";
```

</Tab>

</Tabs>

### HTML (via CDN)

Include the CometChat JavaScript library in your HTML code.

<Tabs>
<Tab title="HTML">
```html
<script type="text/javascript" src="https://unpkg.com/@cometchat-pro/chat@3.0.13/CometChat.js"></script>
```

</Tab>

</Tabs>

## Initialize CometChat

The `init()` method initialises the settings required for CometChat. The `init()` method takes the below parameters:

1. appID - You CometChat App ID
2. appSettings - An object of the AppSettings class can be created using the AppSettingsBuilder class. The region field is mandatory and can be set using the `setRegion()` method.

The `AppSettings` class allows you to configure two settings:

* **Region**: The region where you app was created.
* [Presence Subscription](/sdk/javascript/3.0/user-presence)**:** Represents the subscription type for user presence (real-time online/offline status)
* **autoEstablishSocketConnection(boolean value)**: This property takes a boolean value which when set to `true` informs the SDK to manage the web-socket connection internally. If set to `false` , it informs the SDK that the web-socket connection will be managed manually. The default value for this parameter is true. For more information on this, please check the [Managing Web-Socket connections manually](/sdk/javascript/3.0/advanced-managing-web-socket-connections-manually) section. The default value for this property is **true.**
* **overrideAdminHost(adminHost: string)**: This method takes the admin URL as input and uses this admin URL instead of the default admin URL. This can be used in case of dedicated deployment of CometChat.
* **overrideClientHost(clientHost: string)**: This method takes the client URL as input and uses this client URL instead of the default client URL. This can be used in case of dedicated deployment of CometChat.

You need to call `init()` before calling any other method from CometChat. We suggest you call the `init()` method on app startup, preferably in the `index.js` file.

<Tabs>
<Tab title="JavaScript">
```javascript
let appID = "APP_ID";
let region = "APP_REGION";
let appSetting = new CometChat.AppSettingsBuilder()
                  .subscribePresenceForAllUsers()
                  .setRegion(region)
                  .autoEstablishSocketConnection(true)
                  .build();
CometChat.init(appID, appSetting).then(
() => {
  console.log("Initialization completed successfully");
}, error => {
  console.log("Initialization failed with error:", error);
}
);
```

</Tab>

<Tab title="TypeScript">
```typescript
let appID: string = "APP_ID",
  region: string = "APP_REGION",
  appSetting: CometChat.AppSettings = new CometChat.AppSettingsBuilder()
  		.subscribePresenceForAllUsers()
  		.setRegion(region)
  		.autoEstablishSocketConnection(true)
  		.build();
CometChat.init(appID, appSetting).then(
(initialized: boolean) => {
  console.log("Initialization completed successfully", initialized);
}, (error: CometChat.CometChatException) => {
  console.log("Initialization failed with error:", error);
}
);
```

</Tab>

</Tabs>

Make sure you replace the `APP_ID` with your CometChat **App ID** and `APP_REGION` with your **App Region** in the above code.

| Parameter  | Description                         |
| ---------- | ----------------------------------- |
| appID      | CometChat App ID                    |
| appSetting | An object of the AppSettings class. |
